2007-04-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix type check in relational
	  operations, fixes bug 434507

2007-04-30  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: add pointer to integer conversion in
	  foreach statements, fixes bug 433288

2007-04-24  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: add g_bit_nth_lsf, g_bit_nth_msf, and
	  g_bit_storage

2007-04-24  Jürg Billeter  <j@bitron.ch>

	* vala/valacallback.vala: add possibility to override default cname
	* vala/valaattributeprocessor.vala: process callback attributes
	* vala/valainterfacewriter.vala: cleanup code to write identifiers

2007-04-18  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: use const types where appropriate,
	  fixes bug 428393

2007-04-18  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: simplify unref expression for non-null
	  types
	* vala/valaclass.vala: don't mark fields as non-null due to
	  initialization issue

2007-04-12  Jürg Billeter  <j@bitron.ch>

	* vala/valatypereference.vala: add is_null property
	* vala/valasemanticanalyzer.vala: fix type analysis in conditional and
	  parenthesized expressions, fixes bug 428368
	* vapi/glib-2.0.vala: don't mark GLib.Object and GLib.InitiallyUnowned
	  as abstract

2007-04-12  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: fix warning when using interface
	  properties

2007-04-06  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: use yyleng instead of strlen
	* vala/valainterfacewriter.vala: don't write unnecessary attributes to
	  reduce parse time
	* vapi/atk.vala, vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala, vapi/pango.vala:
	  remove unnecessary attributes to reduce parse time

2007-04-05  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala, vala/valaforstatement.vala: support
	  temporary variables in initializers and iterators of for statements
	* vala/valacodegenerator.vala: support freeing generic types